# PixMe

./: db.sqlite3  manage.py  pyproject.toml
pixme/: asgi.py  settings.py  urls.py  wsgi.py
pixme/apps/auth/: apps.py
pixme/apps/auth/migrations/: 0001_initial.py
pixme/apps/base/: apps.py  models.py
pixme/apps/base/rest/: pagination.py
pixme/apps/rest/: apps.py  serializers.py
pixme/apps/social/: admin.py  apps.py  models.py  urls.py  views.py
pixme/apps/social/migrations/: 0001_initial.py  0002_follow.py  0003_alter_follow_is_following.py  0004_follow_number.py  0005_rename_user_follow_follower_and_more.py  0006_rename_likes_post_liked_by_alter_postlike_post.py  0007_alter_postlike_unique_together.py  0008_comment.py  0009_rename_comment_commentmodel.py  0010_rename_commentmodel_comment.py  0011_alter_comment_comment.py  0012_alter_comment_post_alter_comment_profile.py
